"""create transactions table

Revision ID: b2a8d4bf4ee2
Revises: c558fd490ae6
Create Date: 2026-07-17 03:07:54.196584

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = 'b2a8d4bf4ee2'
down_revision: Union[str, Sequence[str], None] = 'c558fd490ae6'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('transactions',
    sa.Column('transaction_id', sa.String(), nullable=False),
    sa.Column('customer_id', sa.String(), nullable=False),
    sa.Column('amount', sa.Numeric(precision=12, scale=2), nullable=False),
    sa.Column('currency', sa.String(length=3), nullable=False),
    sa.Column('country', sa.String(length=2), nullable=False),
    sa.Column('channel', sa.Enum('WEB', 'MOBILE', name='channel', native_enum=False), nullable=False),
    sa.Column('device_id', sa.String(), nullable=False),
    sa.Column('timestamp', sa.DateTime(timezone=True), nullable=False),
    sa.Column('merchant_id', sa.String(), nullable=False),
    sa.PrimaryKeyConstraint('transaction_id')
    )
    op.create_index(op.f('ix_transactions_customer_id'), 'transactions', ['customer_id'], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_transactions_customer_id'), table_name='transactions')
    op.drop_table('transactions')
    # ### end Alembic commands ###
